{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 12,
  "lineage": "4da78128-82e8-fe7e-5bf6-7396c7100f7c",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c355da715d793ef",
            "arn": "arn:aws:ec2:us-east-1:767397921044:elastic-ip/eipalloc-07c355da715d793ef",
            "domain": "vpc",
            "id": "eipalloc-07c355da715d793ef",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-23-19-5.compute-1.amazonaws.com",
            "public_ip": "52.23.19.5",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jmeter-nat-eip"
            },
            "tags_all": {
              "Name": "jmeter-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397921044:internet-gateway/igw-0cc07bcef47b1de0e",
            "id": "igw-0cc07bcef47b1de0e",
            "owner_id": "767397921044",
            "tags": {
              "Name": "jmeter-igw"
            },
            "tags_all": {
              "Name": "jmeter-igw"
            },
            "vpc_id": "vpc-013b43621a653aa90"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c355da715d793ef",
            "association_id": "eipassoc-096d9a06370a8f978",
            "connectivity_type": "public",
            "id": "nat-05c2a2f3b7182e6fd",
            "network_interface_id": "eni-004fda615a247cb52",
            "private_ip": "10.0.1.142",
            "public_ip": "52.23.19.5",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0694d8f92eb1673c2",
            "tags": {
              "Name": "jmeter-nat-gw"
            },
            "tags_all": {
              "Name": "jmeter-nat-gw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397921044:route-table/rtb-02d383b873146919b",
            "id": "rtb-02d383b873146919b",
            "owner_id": "767397921044",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05c2a2f3b7182e6fd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jmeter-private-rt"
            },
            "tags_all": {
              "Name": "jmeter-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-013b43621a653aa90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397921044:route-table/rtb-0e8717b73f4f98f3f",
            "id": "rtb-0e8717b73f4f98f3f",
            "owner_id": "767397921044",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cc07bcef47b1de0e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jmeter-public-rt"
            },
            "tags_all": {
              "Name": "jmeter-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-013b43621a653aa90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00eeaf75b72567d68",
            "route_table_id": "rtb-02d383b873146919b",
            "subnet_id": "subnet-04249f693a58fea61"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8d6877997309e05",
            "route_table_id": "rtb-0e8717b73f4f98f3f",
            "subnet_id": "subnet-0694d8f92eb1673c2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397921044:security-group/sg-01fb6d9a89e8a02d8",
            "description": "Allow SSH and JMeter traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01fb6d9a89e8a02d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1099,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 60000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jmeter-sg",
            "name_prefix": "",
            "owner_id": "767397921044",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jmeter-sg"
            },
            "tags_all": {
              "Name": "jmeter-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-013b43621a653aa90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397921044:subnet/subnet-04249f693a58fea61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04249f693a58fea61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397921044",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jmeter-private-subnet"
            },
            "tags_all": {
              "Name": "jmeter-private-subnet"
            },
            "vpc_id": "vpc-013b43621a653aa90"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397921044:subnet/subnet-0694d8f92eb1673c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0694d8f92eb1673c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397921044",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jmeter-public-subnet"
            },
            "tags_all": {
              "Name": "jmeter-public-subnet"
            },
            "vpc_id": "vpc-013b43621a653aa90"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397921044:vpc/vpc-013b43621a653aa90",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ee219122375811c5",
            "default_route_table_id": "rtb-09879e97b32c9abf0",
            "default_security_group_id": "sg-01b99b4c52a58a34d",
            "dhcp_options_id": "dopt-0144c81ca96d38eaa",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-013b43621a653aa90",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09879e97b32c9abf0",
            "owner_id": "767397921044",
            "tags": {
              "Name": "jmeter-vpc"
            },
            "tags_all": {
              "Name": "jmeter-vpc"
            }
          }
        }
      ]
    }
  ]
}